--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,6 @@
     <dimen name="row_show_border">4dp</dimen>
     <dimen name="row_show_elevation">8dp</dimen>
     <dimen name="row_show_rv_margin">4dp</dimen>
+    <dimen name="appbar_padding">16dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
 </resources>
